# cpp-data-processing-engine

./: .editorconfig  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
app/: main.cpp
benchmarks/: benchmark.cpp
examples/: python_example.py
include/datapipe/: csv.hpp  pipeline.hpp  thread_pool.hpp  types.hpp
python/: bindings.cpp
src/: csv.cpp  pipeline.cpp  types.cpp
tests/: test_main.cpp  test_python.py
tests/fixtures/: basic.csv  malformed.csv
tools/: generate_dataset.py
